--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bower": "^1.8.2",
     "browserify": "^13.1.1",
     "http-server": "^0.6.1",
+    "json-server":"^0.12.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^0.1.12",
